--- a/map_with_button.html
+++ b/map_with_button.html
@@ -43,16 +43,16 @@
   <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lcyIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
 
-    const defaultCenter    = [-71.245, 42.254],
-          defaultZoom      = 7.6,
-          vectorLayerId    = 'municipalitiesbycommunitytype-c8ks3h copy',
-          tileField        = 'Municipali',
-          geojsonField     = 'Municipality',
-          geojsonURL       = './MunicipalitiesByCommunityType.geojson';
+    const defaultCenter = [-71.245, 42.254],
+          defaultZoom   = 7.6,
+          vectorLayerId = 'municipalitiesbycommunitytype-c8ks3h copy',
+          tileField     = 'Municipali',
+          geojsonField  = 'Municipality',
+          geojsonURL    = './MunicipalitiesByCommunityType.geojson';
 
     let municipalitiesData = [], initialCamera;
 
-    // initialize map (no maxBounds, minZoom = defaultZoom)
+    // initialize map
     const map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
@@ -62,35 +62,35 @@
       maxZoom: 22
     });
 
-    // disable default wheel zoom
+    // disable default scroll-zoom
     map.scrollZoom.disable();
 
-    // custom wheel handler for faster zoom
+    // custom wheel handler: faster zoom
     map.getCanvas().addEventListener('wheel', e => {
       e.preventDefault();
-      const zoomSpeed = 0.005;                     // ~0.5 zoom per wheel notch
-      const zoomDelta = -e.deltaY * zoomSpeed;     // e.deltaY < 0 => zoom in
+      const zoomSpeed = 0.02;                    // ~2 zoom levels per wheel notch
+      const zoomDelta = -e.deltaY * zoomSpeed;   // negative deltaY => zoom in
 
       if (zoomDelta < 0) {
-        // always allow zoom‐out
-        map.easeTo({ zoom: map.getZoom() + zoomDelta, duration: 500 });
+        // always allow zoom-out
+        map.easeTo({ zoom: map.getZoom() + zoomDelta, duration: 200 });
       } else {
-        // zoom‐in only over a municipality
+        // zoom-in only if hovering over a municipality
         const features = map.queryRenderedFeatures(
           [e.offsetX, e.offsetY],
           { layers: [vectorLayerId] }
         );
         if (features.length) {
-          map.easeTo({ zoom: map.getZoom() + zoomDelta, duration: 500 });
+          map.easeTo({ zoom: map.getZoom() + zoomDelta, duration: 200 });
         }
       }
     }, { passive: false });
 
-    // handle iframe/container resizes
+    // resize on container changes
     window.addEventListener('resize', () => map.resize());
 
     map.on('load', () => {
-      // capture initial camera
+      // capture the exact initial camera
       initialCamera = {
         center:  map.getCenter().toArray(),
         zoom:    map.getZoom(),
@@ -116,8 +116,8 @@
 
       // highlight layer
       map.addSource('highlight-town', {
-        type:'geojson',
-        data:{ type:'FeatureCollection', features:[] }
+        type: 'geojson',
+        data: { type:'FeatureCollection', features:[] }
       });
       map.addLayer({
         id: 'highlight-fill',
@@ -135,7 +135,7 @@
       // home button
       document.getElementById('homeButton').onclick = clearSelection;
 
-      // click‐to‐select
+      // click-to-select
       map.on('click', vectorLayerId, e => {
         if (!municipalitiesData.length) return;
         const clicked = e.features[0].properties[tileField].toLowerCase();
@@ -146,17 +146,17 @@
       });
     });
 
-    // zoom into a feature
     function selectFeature(feature) {
-      const coords = feature.geometry.type==='MultiPolygon'
+      const coords = (feature.geometry.type === 'MultiPolygon')
         ? feature.geometry.coordinates.flat(2)
         : feature.geometry.coordinates[0];
       const bb = coords.reduce(
-        (b,c) => b.extend(c),
+        (b, c) => b.extend(c),
         new mapboxgl.LngLatBounds()
       );
       map.fitBounds(bb, { padding:40, duration:1000 });
-      map.setFilter('fade-layer',
+      map.setFilter(
+        'fade-layer',
         ['!=',['get', geojsonField], feature.properties[geojsonField]]
       );
       map.setLayoutProperty('fade-layer','visibility','visible');
@@ -169,7 +169,6 @@
       }, '*');
     }
 
-    // return to initial view
     function clearSelection() {
       map.setLayoutProperty('fade-layer','visibility','none');
       map.getSource('highlight-town').setData({
@@ -186,7 +185,6 @@
       window.parent.postMessage({ type:'clear-complete' }, '*');
     }
 
-    // listen for search/clear from parent
     window.addEventListener('message', e => {
       const msg = e.data;
       if (!municipalitiesData.length) return;
