--- a/search.html
+++ b/search.html
@@ -143,9 +143,6 @@
     .legend-group {
       margin-top: 12px;
     }
-    .legend-group.exempt {
-      margin-top: 18px;
-    }
     .legend-title {
       display: block;
       color: #003f63;
@@ -170,7 +167,7 @@
     #legendMap {
       position: absolute;
       bottom: 20px;
-      left: 20px;            /* moved to bottom-left */
+      left: 20px;
       z-index: 4;
       font-size: 0.8em;
       padding: 6px 8px;
@@ -277,10 +274,6 @@
         <div class="legend-item"><span class="patch" style="background:#B4B474"></span>Adjacent community</div>
         <div class="legend-item"><span class="patch" style="background:#E3E3B6"></span>Adjacent small town</div>
       </div>
-      <div class="legend-group exempt">
-        <span class="legend-title">Exempt Communities</span>
-        <div class="legend-item"><span class="patch" style="background:#9C9C9C"></span>Exempt</div>
-      </div>
     </div>
 
     <!-- Info panel -->
@@ -306,10 +299,6 @@
             <div class="legend-item"><span class="patch" style="background:#508EB1"></span>Commuter Rail</div>
             <div class="legend-item"><span class="patch" style="background:#B4B474"></span>Adjacent community</div>
             <div class="legend-item"><span class="patch" style="background:#E3E3B6"></span>Adjacent small town</div>
-          </div>
-          <div class="legend-group exempt">
-            <span class="legend-title">Exempt Communities</span>
-            <div class="legend-item"><span class="patch" style="background:#9C9C9C"></span>Exempt</div>
           </div>
         </div>
 
