--- a/search.html
+++ b/search.html
@@ -271,8 +271,8 @@
         <span class="legend-title">Community Types</span>
         <div class="legend-item"><span class="patch" style="background:#2A6D93"></span>Rapid Transit</div>
         <div class="legend-item"><span class="patch" style="background:#508EB1"></span>Commuter Rail</div>
-        <div class="legend-item"><span class="patch" style="background:#B4B474"></span>Adjacent community</div>
-        <div class="legend-item"><span class="patch" style="background:#E3E3B6"></span>Adjacent small town</div>
+        <div class="legend-item"><span class="patch" style="background:#B4B474"></span>Adjacent Community</div>
+        <div class="legend-item"><span class="patch" style="background:#E3E3B6"></span>Adjacent Small Town</div>
       </div>
     </div>
 
